[+] overflow fix.

--- a/static/admin/css/style.css
+++ b/static/admin/css/style.css
@@ -6,6 +6,10 @@
 	width: 100%;
 }
 
+.wtags {
+	width: 160%;
+}
+
 .h100 {
 	height: 100%;
 }
@@ -44,6 +48,10 @@
 .pdvd {
 	padding-top: 10px;
 	padding-bottom: 10px;
+}
+
+.mgb3 {
+	margin-bottom: 20px;
 }
 
 .pdvd2 {
